<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_color">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="100dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="italic|bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:text="@string/app_name2"
            android:textColor="@color/Green4"
            android:textSize="30sp"
            android:textStyle="italic|bold" />

        <ImageView
            android:id="@+id/autumn_leaf"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-8dp"
            android:layout_marginStart="-129dp"
            android:layout_marginEnd="160dp"
            android:contentDescription="image"
            android:src="@drawable/autumn_leaf" />

    </LinearLayout>

    <TextView
        android:id="@+id/statistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:text="@string/statistics"
        android:textColor="@color/MixGreen"
        android:textSize="20sp"/>


    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="22dp"
        android:text="0"
        android:textColor="@color/Green4"
        android:textSize="55sp"/>

    <TextView
        android:id="@+id/recycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textSize="17sp"
        android:layout_gravity="center"
        android:layout_marginTop="18dp"
        android:textColor="@color/Green4"/>


        <TextView
        android:id="@+id/plastic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plastic"
        android:textSize="20sp"
        android:textColor="@color/Green"
        android:layout_marginStart="10dp"
        android:layout_marginTop="80dp"/>

        <ProgressBar
            android:id="@+id/plasticBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progressTint="@color/Blue"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="150dp"/>

    <TextView
        android:id="@+id/paper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/paper"
        android:textSize="20sp"
        android:textColor="@color/Green"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp" />

        <ProgressBar
            android:id="@+id/paperBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progressTint="@color/Blue"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="150dp"/>


    <TextView
        android:id="@+id/glass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/glass"
        android:textSize="20sp"
        android:textColor="@color/Green"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp" />

        <ProgressBar
            android:id="@+id/glassBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progressTint="@color/Blue"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="150dp"/>

    <TextView
        android:id="@+id/metal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/metal"
        android:textSize="20sp"
        android:textColor="@color/Green"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp" />

        <ProgressBar
            android:id="@+id/metalBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:progressTint="@color/Blue"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="150dp"/>

    <TextView
        android:id="@+id/electronic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/electronics"
        android:textSize="20sp"
        android:textColor="@color/Green"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp" />

        <ProgressBar
            android:id="@+id/electronicBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progressTint="@color/Blue"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="150dp"/>

<com.github.mikephil.charting.charts.BarChart
    android:id="@+id/chart"
    android:layout_marginTop="40dp"
    android:layout_width="350dp"
    android:layout_height="400dp"
    />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Average"
    android:textSize="20sp"
    android:textColor="@color/Green4"
    android:layout_marginTop="20dp"
    android:layout_gravity="center"
    android:layout_marginBottom="20dp"/>


</LinearLayout>
</ScrollView>